--- a/Company.ObjectDictionary.Web/wwwroot/css/site.css
+++ b/Company.ObjectDictionary.Web/wwwroot/css/site.css
@@ -69,3 +69,19 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* 추가 */
+.my-custom-scrollbar {
+    position: relative;
+    height: 800px;
+    overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+    display: block;
+}
+
+.selectedAlphabet {
+    font-weight: bold;
+    color: red;
+}
