--- a/Company.ObjectDictionary.Web/Views/Main/Index.cshtml
+++ b/Company.ObjectDictionary.Web/Views/Main/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <div class="row">
+    <div id="divAlphabet" class="row">
         <div class="col selectedAlphabet">A</div>
         <div class="col">B</div>
         <div class="col">C</div>
@@ -52,107 +52,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="table-primary">
-                        <th scope="row">1</th>
-                        <td>Sample</td>
-                        <td>샘플 개체입니다.</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">6</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">7</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">8</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">9</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">10</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">11</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">12</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">13</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">14</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">15</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">16</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">17</th>
-                        <td>Goods</td>
-                        <td>상품 개체</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">18</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">19</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">20</th>
-                        <td>Price</td>
-                        <td>가격</td>
-                    </tr>
                 </tbody>
             </table>
         </div>
         <div class="col-sm table-wrapper-scroll-y my-custom-scrollbar">
-            <h2>Property</h2>
-            <table class="table table-striped table-hover overflow-auto">
+            <h2>Field</h2>
+            <table id="tblField" class="table table-striped table-hover overflow-auto">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
@@ -161,62 +66,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">6</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">7</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">8</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">9</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                    </tr>
                 </tbody>
             </table>
         </div>
         <div class="col-sm">
-            <code>
-                public class Sample {
-                public string Id {
-                get; set;
-                }
-                }
-            </code>
+            <pre><code id="codeBody"></code></pre>
         </div>
     </div>
 </div>
@@ -226,19 +80,90 @@
     <script type="text/javascript">
         var od;
 
-        function Render() {
-            var m = od.getModels();
-            // [TODO]
+        function init() {
+            $('#divAlphabet').children().click(clickAlphabet);
+
+            od = App.module.objectDictionary();
+            od.setUrl('https://localhost:44337/api');
         }
         
         $(document).ready(function () {
-            od = App.module.objectDictionary();
-            od.setUrl('https://localhost:44337/api');
-            od.getAll(Render);
-
+            init();
+            od.getModelList(getCurrentAlphabet(), renderModel);
         });
 
+        function renderModel() {
+            clearList(true, true, true);
 
+            var m = od.getModels();
+            var tbody = $('#tblModel tbody');
+            m.forEach((el, index, arr) => {
+                tbody.append('<tr id="' + el.id + '"><th scope="row">' + index + '</th><td>' + el.name + '</td><td>' + el.description + '</td></tr>');
+            });
+            
+            tbody.children().click(clickModel);
+        }
+
+        function getCurrentAlphabet() {
+            return $('.selectedAlphabet').text();
+        }
+
+        function clickAlphabet() {
+            var char = this.innerText;
+
+            $('#divAlphabet').children().each((index, obj) => {
+                if (obj.innerText == char) {
+                    $(obj).addClass('selectedAlphabet');
+                } else {
+                    $(obj).removeClass('selectedAlphabet');
+                }
+            });
+
+            od.getModelList(getCurrentAlphabet(), renderModel);
+        }
+
+        function clickModel() {
+            var id = this.id;
+            $('#tblModel tbody').children().each((index, obj) => {
+                if (obj.id == id) {
+                    $(obj).addClass('table-primary');
+                } else {
+                    $(obj).removeClass('table-primary');
+                }
+            });
+
+            od.getModelDetail(this.id, renderField);
+        }
+
+        function renderField() {
+            var m = od.getModel();
+            clearList(false, true, true);
+
+            var tbody = $('#tblField tbody');
+            m.fields.forEach((el, index, arr) => {
+                tbody.append('<tr id="' + el.id + '"><th scope="row">' + index + '</th><td>' + el.name + '</td><td>' + el.description + '</td></tr>');
+            });
+
+            od.getCode(m, renderCode);
+        }
+
+        function renderCode(code) {
+            $('#codeBody').text(code);
+        }
+
+        function clearList(isModelList, isFieldList, isCodeBody) {
+            if (isModelList == true) {
+                $('#tblModel tbody').children().remove();
+            }
+
+            if (isFieldList == true) {
+                $('#tblField tbody').children().remove();
+            }
+
+            if (isCodeBody == true) {
+                $('#codeBody').empty();
+            }
+        }
 
     </script>
 }
